{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 223,
  "lineage": "5997b321-2f96-cf6d-6b69-11870de6e1ab",
  "resources": [
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:internet-gateway/igw-015c0e008b0b4dcfc",
            "id": "igw-015c0e008b0b4dcfc",
            "owner_id": "811042810960",
            "tags": {
              "Name": "internet-gateway-demo"
            },
            "tags_all": {
              "Name": "internet-gateway-demo"
            },
            "vpc_id": "vpc-01e9717dc1fe3ee37"
          },
          "dependencies": [
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:route-table/rtb-02477ce17965ec50e",
            "id": "rtb-02477ce17965ec50e",
            "owner_id": "811042810960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015c0e008b0b4dcfc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-demo"
            },
            "tags_all": {
              "Name": "public-route-table-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e9717dc1fe3ee37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_internet_gateway.gw",
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:route-table/rtb-023d2dcef40bcd9e4",
            "id": "rtb-023d2dcef40bcd9e4",
            "owner_id": "811042810960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table-demo"
            },
            "tags_all": {
              "Name": "private-route-table-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e9717dc1fe3ee37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018c8cc41d2cc0d9f",
            "route_table_id": "rtb-023d2dcef40bcd9e4",
            "subnet_id": "subnet-0c07908b914326028"
          },
          "dependencies": [
            "module.rds.aws_route_table.route_private",
            "module.rds.aws_subnet.private_1",
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06327c289c562a8c7",
            "route_table_id": "rtb-023d2dcef40bcd9e4",
            "subnet_id": "subnet-01e0702b9b3d5cd84"
          },
          "dependencies": [
            "module.rds.aws_route_table.route_private",
            "module.rds.aws_subnet.private_2",
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0510060ff75f36db4",
            "route_table_id": "rtb-023d2dcef40bcd9e4",
            "subnet_id": "subnet-03c33fa9d65c354f4"
          },
          "dependencies": [
            "module.rds.aws_route_table.route_private",
            "module.rds.aws_subnet.private_3",
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d62e99880a89f7c",
            "route_table_id": "rtb-02477ce17965ec50e",
            "subnet_id": "subnet-0e22e0d416b3a48ea"
          },
          "dependencies": [
            "module.rds.aws_internet_gateway.gw",
            "module.rds.aws_route_table.route-public",
            "module.rds.aws_subnet.public_1",
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aff88f281f0947fe",
            "route_table_id": "rtb-02477ce17965ec50e",
            "subnet_id": "subnet-0e10e53685e2354ef"
          },
          "dependencies": [
            "module.rds.aws_internet_gateway.gw",
            "module.rds.aws_route_table.route-public",
            "module.rds.aws_subnet.public_2",
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebc068de9a2aeac2",
            "route_table_id": "rtb-02477ce17965ec50e",
            "subnet_id": "subnet-0bf2331772300a50e"
          },
          "dependencies": [
            "module.rds.aws_internet_gateway.gw",
            "module.rds.aws_route_table.route-public",
            "module.rds.aws_subnet.public_3",
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:security-group/sg-0e40482fd45082120",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e40482fd45082120",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_SSH_http",
            "name_prefix": "",
            "owner_id": "811042810960",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e9717dc1fe3ee37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:security-group/sg-020d708c87f33dbf5",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020d708c87f33dbf5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e40482fd45082120"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "811042810960",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e9717dc1fe3ee37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_security_group.allow_ssh_http",
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:subnet/subnet-0c07908b914326028",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c07908b914326028",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811042810960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_1-demo"
            },
            "tags_all": {
              "Name": "private_1-demo"
            },
            "vpc_id": "vpc-01e9717dc1fe3ee37"
          },
          "dependencies": [
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:subnet/subnet-01e0702b9b3d5cd84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e0702b9b3d5cd84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811042810960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_2-demo"
            },
            "tags_all": {
              "Name": "private_2-demo"
            },
            "vpc_id": "vpc-01e9717dc1fe3ee37"
          },
          "dependencies": [
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:subnet/subnet-03c33fa9d65c354f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c33fa9d65c354f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811042810960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_3-demo"
            },
            "tags_all": {
              "Name": "private_3-demo"
            },
            "vpc_id": "vpc-01e9717dc1fe3ee37"
          },
          "dependencies": [
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:subnet/subnet-0e22e0d416b3a48ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e22e0d416b3a48ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811042810960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_1-demo"
            },
            "tags_all": {
              "Name": "public_1-demo"
            },
            "vpc_id": "vpc-01e9717dc1fe3ee37"
          },
          "dependencies": [
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:subnet/subnet-0e10e53685e2354ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e10e53685e2354ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811042810960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_2-demo"
            },
            "tags_all": {
              "Name": "public_2-demo"
            },
            "vpc_id": "vpc-01e9717dc1fe3ee37"
          },
          "dependencies": [
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:subnet/subnet-0bf2331772300a50e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf2331772300a50e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811042810960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_3-demo"
            },
            "tags_all": {
              "Name": "public_3-demo"
            },
            "vpc_id": "vpc-01e9717dc1fe3ee37"
          },
          "dependencies": [
            "module.rds.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811042810960:vpc/vpc-01e9717dc1fe3ee37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04dfe16279b98e322",
            "default_route_table_id": "rtb-08b505c1e464a99cf",
            "default_security_group_id": "sg-06d41490c979049b7",
            "dhcp_options_id": "dopt-05a18990c72772201",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01e9717dc1fe3ee37",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b505c1e464a99cf",
            "owner_id": "811042810960",
            "tags": {
              "Name": "Custom-VPC"
            },
            "tags_all": {
              "Name": "Custom-VPC"
            }
          }
        }
      ]
    }
  ]
}